--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HotelBreakfastReservationsApp</title>
+    <title>Hotel-Breakfast-Reservations-App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-      <p class="notice"><%= notice %></p>
-     <p class="alert"><%= alert %></p>
+  <body class="p-3 mb-2 bg-primary text-white">
 
-    <ul class="display-inline">
-      <%= render 'shared/navbar' %>
-    </ul>
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+   <%= render 'shared/navbar'%>
     <%= yield %>
   </body>
 </html>
