--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Breakfast Reservations Hotel</a>
-           <% if current_user %>
-    <%= link_to('log out', destroy_user_session_path)  %>
-    <% else %>
-    <%= link_to('log in', new_user_session_path) %>
-    <% end %>
-  </nav>
-</div>
+<nav class="nav justify-content-end">
+  <div class="container">
+       <a class="navbar-brand">Breakfast Reservations Hotel</a>
+       <div class="dropdown-menu ">
+        <% if current_user %>
+        <a class="dropdown-item active" href="#"><%= link_to('log out', destroy_user_session_path)  %></a>
+        <% else %>
+        <a class="dropdown-item" href="#"><%= link_to('log in', new_user_session_path) %></a>
+        <% end %>
+       </div>
+  </div>
+</nav>
