--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,16 @@
   </head>
 
   <body class="">  
-<nav class="navbar navbar-expand-lg  navbar-light text-dark border border-3 " style="background-color: #20c997;">
+<nav class="navbar navbar-expand-lg  navbar-light  border border-3 " style="background-color: #20c997;">
   <div class="container-sm my-2">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse  " id="navbarNavDropdown">
       <ul class="navbar-nav  ">
-              <% if current_user %>
-        <li class="nav-item"><button class="btn btn-outline-success me-2" type="button"><%= link_to('Cerrar sesión Usuario', destroy_user_session_path)%></button>
-              <% else %>
+        <% if current_user %>
+        <li class="nav-item"><button class="btn btn-outline-success me-2" type="button"><%= link_to('Cerrar sesión Usuario', destroy_user_session_path, method: :delete)%></button>
+        <% else %>
         <li class="nav-item"><button class="btn btn-outline-success me-2" type="button"><%= link_to('Iniciar sesión', new_user_session_path)%></button>
         <li class="nav-item"><button class="btn btn-outline-success me-2" type="button"><%= link_to('Registrarse', new_user_registration_path)%></button>
               <% end %>
@@ -31,7 +31,7 @@
             Acceso Admin
           </a>
           <ul class="dropdown-menu  border border-3" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#"><%= link_to('Cerrar sesión admin', destroy_admin_session_path)%></a></li>
+            <li><a class="dropdown-item" href="#"><%= link_to('Cerrar sesión admin', destroy_admin_session_path, method: :delete)%></a></li>
             <li><a class="dropdown-item" href="#"><%= link_to('Iniciar sesión', new_admin_session_path) %></a></li>
             <li role="separator" class="divider"></li>
             <li><a class="dropdown-item" href="#"><%= link_to('Registrarse', new_admin_registration_path) %></a></li>
