--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,5 +10,30 @@
   <%= @room.number %>
 </p>
 
-<%= link_to 'Edit', edit_room_path(@room) %> |
-<%= link_to 'Back', rooms_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Room</th>
+      <th>Start date</th>
+      <th>End date</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @reservations.each do |reservation| %>
+      <tr>
+        <td><%= reservation.room_id %></td>
+        <td><%= reservation.start_date %></td>
+        <td><%= reservation.end_date %></td>
+        <td><%= link_to 'Show', hotel_room_reservation_path(@hotel, @room, reservation) %></td>
+        <td><%= link_to 'Edit', edit_hotel_room_reservation_path(@hotel, @room, reservation) %></td>
+        <td><%= link_to 'Destroy', hotel_room_reservation_path(@hotel, @room, reservation), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+<%= link_to 'Edit', edit_hotel_room_path(@hotel, @room) %> |
+<%= link_to 'Back', hotel_rooms_path(@hotel) %>
