--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -15,5 +15,29 @@
   <%= @hotel.city %>
 </p>
 
+
+<table>
+  <thead>
+    <tr>
+      <th>Hotel</th>
+      <th>Room_number</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @rooms.each do |room| %>
+      <tr>
+        <td><%= room.hotel_id %></td>
+        <td><%= room.number %></td>
+        <td><%= link_to 'Show', hotel_room_path(@hotel, room) %></td>
+        <td><%= link_to 'Edit', edit_hotel_room_path(room) %></td>
+        <td><%= link_to 'Destroy', hotel_room_path(@hotel, room), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
 <%= link_to 'Edit', edit_hotel_path(@hotel) %> |
 <%= link_to 'Back', hotels_path %>
