--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', room: @room %>
 
-<%= link_to 'Show', @room %> |
-<%= link_to 'Back', rooms_path %>
+<%= link_to 'Show', [@hotel, @room] %> |
+<%= link_to 'Back', hotel_rooms_path(@hotel) %>
