--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,7 +5,6 @@
 <table>
   <thead>
     <tr>
-      <th>Hotel</th>
       <th>Number</th>
       <th colspan="3"></th>
     </tr>
@@ -14,11 +13,10 @@
   <tbody>
     <% @rooms.each do |room| %>
       <tr>
-        <td><%= room.hotel_id %></td>
         <td><%= room.number %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', [@hotel,room] %></td>
+        <td><%= link_to 'Edit', edit_hotel_room_path(@hotel,room) %></td>
+        <td><%= link_to 'Destroy', [@hotel,room], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Room', new_room_path %>
+<%= link_to 'New Room', new_hotel_room_path(@hotel) %>
