--- a/app/views/user_breakfasts/index.html.erb
+++ b/app/views/user_breakfasts/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Breakfast</th>
+      <th>user_id</th>
+      <th>breakfast_id</th>
       <th>Place</th>
       <th>Time</th>
       <th colspan="3"></th>
@@ -16,8 +16,8 @@
   <tbody>
     <% @user_breakfasts.each do |user_breakfast| %>
       <tr>
-        <td><%= user_breakfast.user_id %></td>
-        <td><%= user_breakfast.breakfast_id %></td>
+        <td><%= user_breakfast.user.first_name %></td>
+        <td><%= user_breakfast.breakfast.reservation_id %></td>
         <td><%= user_breakfast.place %></td>
         <td><%= user_breakfast.time %></td>
         <td><%= link_to 'Show', user_breakfast %></td>
