--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -29,3 +29,5 @@
 <br>
 
 <%= link_to 'New Reservation', new_hotel_room_reservation_path(@hotel, @room) %>
+<br>
+<%= link_to 'Back Room',[@hotel, @room] %>
