--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', reservation: @reservation %>
 
-<%= link_to 'Back', reservations_path %>
+<%= link_to 'Back', hotel_room_reservations_path(@hotel, @room) %>
