--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,20 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="">  
+  <body class="bg-dark text-white mx-0 px-2 pt-1">  
 <nav class="navbar navbar-expand-lg  navbar-light  border border-3 " style="background-color: #20c997;">
   <div class="container-sm my-2">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-        <li class="nav-item dropdown  ">
+    <div class="collapse navbar-collapse  " id="navbarNavDropdown">
+      <ul class="navbar-nav  ">
+              <li class="nav-item dropdown  ">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Clientes</a>
+            Acceso Clientes</a>
           <ul class="dropdown-menu  border border-3" aria-labelledby="navbarDropdownMenuLink">
-           <% if current_user %>
-            <li><a class="dropdown-item" href="#"><%= link_to('Cerrar sesión admin', destroy_user_session_path, method: :delete)%></a></li>
+          <% if current_user %>
+            <li><a class="dropdown-item" href="#"><%= link_to('Cerrar sesión', destroy_user_session_path, method: :delete)%></a></li>
              <% else %>
             <li><a class="dropdown-item" href="#"><%= link_to('Iniciar sesión', new_user_session_path) %></a></li>
             <li role="separator" class="divider"></li>
@@ -40,8 +42,6 @@
             <li><a class="dropdown-item" href="#"><%= link_to('Cerrar sesión admin', destroy_admin_session_path, method: :delete)%></a></li>
              <% else %>
             <li><a class="dropdown-item" href="#"><%= link_to('Iniciar sesión', new_admin_session_path) %></a></li>
-            <li role="separator" class="divider"></li>
-            <li><a class="dropdown-item" href="#"><%= link_to('Registrarse', new_admin_registration_path) %></a></li>
             <% end %>
           </ul>
         </li>
