--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,27 @@
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
+    <div class="row">
+      <div class="col-sm"></div>
+      <div class="col-sm">
+      <div class="container my-5 text-center bg-primary">
+        <h2 class="text-light">Última visita!</h2>
+        <div class="mt-5" id="contenido">           
+        </div>
+      </div>
+      </div>
+      <div class="col-sm"></div>
+    </div>
 
-    
+    <script>
+        var contenido = document.querySelector('#contenido')
+            fetch('https://randomuser.me/api/')
+            .then(res => res.json())
+            .then(data => {
+                console.log(data.results['0'])
+                contenido.innerHTML = `
+                <img src="${data.results['0'].picture.large}" width="70px" class="img-fluid rounded-circle">`
+            })
+    </script>
   </body>
 </html>
