--- a/app/views/user_breakfasts/_form.html.erb
+++ b/app/views/user_breakfasts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user_breakfast) do |form| %>
+<%= form_with(model: [user_breakfast]) do |form| %>
   <% if user_breakfast.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user_breakfast.errors.count, "error") %> prohibited this user_breakfast from being saved:</h2>
